# netcdf4-python-stubs

./: LICENSE  README.md  netCDF4_stubs_merge_docstrings.py  pyproject.toml
dev/: merge_docstrings.py
dev/docstrings/: netCDF4._netCDF4.1.6.5_docstrings.json  netCDF4._netCDF4.1.7.0_docstrings.json  netCDF4._netCDF4.1.7.1_docstrings.json
netCDF4/: _netCDF4.pyi
netCDF4-stubs/: __init__.pyi  _netCDF4.pyi
