[tool.poetry]
name = "netcdf4-stubs"
version = "0.1.0a0"
description = "Stub files for the netCDF4 package"
authors = ["Randall Pittman <pittmara@oregonstate.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "netCDF4-stubs" },
    { include = "netCDF4-stubs/*.pyi"},
]

[tool.poetry.dependencies]
python = "^3.8"
netCDF4 = "~1.6.5"
numpy = "^1.21.0"  # needed for numpy.typing
typing_extensions = "^4.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipython = "^8.12.3"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130  # per Python typing documentation