[tool.poetry]
name = "netcdf4-stubs"
version = "1.7.0a2"
description = "Stub files for the netCDF4 package"
authors = ["Randall Pittman <pittmara@oregonstate.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "netCDF4-stubs" },
    { include = "netCDF4-stubs/*.pyi"},
]
include = ["netCDF4_stubs_merge_docstrings.py"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.21.0"  # needed for numpy.typing
typing_extensions = "^4.6.0"
cftime = "^1.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipython = "^8.12.3"
libcst = "^1.1.0"
ruff = "^0.4.9"
netcdf4 = "^1.7.0"

[tool.poetry.scripts]
netCDF4_stubs_merge_docstrings = "netCDF4_stubs_merge_docstrings:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130  # per Python typing documentation